Kubernetes/s4_event/statefulsets.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: s4-mysql
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: s4-mysql
        image: mysql:8.4
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: s4-pvc
