Kubernetes/s4_event/services.yml
apiVersion: v1
kind: Service
metadata:
  name: s4-backend
spec:
  selector:
    app: s4-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: s4-frontend
spec:
  selector:
    app: s4-frontend
  ports:
    - protocol: TCP
      port: 4173
      targetPort: 4173

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
