Kubernetes/s4_event/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s4-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: backend.s4.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: s4-backend
              port:
                number: 3000

    - host: frontend.s4.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: s4-frontend
              port:
                number: 4173
